Reflection for FrozenArray<Element> caching invariant https://bugs.webkit.org/show_bug.cgi?id=240563

Reviewed by NOBODY (OOPS!).

This patch implements the caching layer described in the spec PR
for reflection of FrozenArray<T> attributes:
https://github.com/whatwg/html/pull/3917
Which fixes the test cases that were checking for:
el.ariaDescribedByElements === el.ariaDescribedByElements

This patch stores a new map in ElementRareData, where we stored
the computed Vector in a JSValueInWrappedObject.
It adds a new method Element::getElementsArrayAttribute()
that is the one in charge of dealing with the cached values.

This tweaks the bindings code generator, so we can return
a JSValue in Element::getElementsArrayAttribute().

This also adds JSCustomMarkFunction in Element.idl,
so we can visit the cached map in JSElement::visitAdditionalChildren().

Apart from that this adds a new test case on the WPT test.

* LayoutTests/imported/w3c/web-platform-tests/dom/nodes/aria-element-reflection.tentative-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/dom/nodes/aria-element-reflection.tentative.html:
* Source/WebCore/bindings/js/JSElementCustom.cpp:
(WebCore::JSElement::visitAdditionalChildren):
* Source/WebCore/bindings/js/JSValueInWrappedObject.h:
* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
(GenerateAttributeGetterBodyDefinition):
* Source/WebCore/bindings/scripts/test/JS/JSTestObj.cpp:
(WebCore::jsTestObj_reflectedElementsArrayAttrGetter):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::cachedAttrAssociatedElementsMapIfExists const):
(WebCore::Element::getElementsArrayAttribute):
(WebCore::Element::getElementsArrayAttributeInternal const):
(WebCore::Element::getElementsArrayAttribute const): Deleted.
* Source/WebCore/dom/Element.h:
* Source/WebCore/dom/Element.idl:
* Source/WebCore/dom/ElementRareData.cpp:
* Source/WebCore/dom/ElementRareData.h:
(WebCore::ElementRareData::cachedAttrAssociatedElementsMap):
(WebCore::ElementRareData::useTypes const):
* Source/WebCore/dom/NodeRareData.h: